# pennylane-qrack

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.py
.github/workflows/: build.yml  docs.yaml  tests.yml
doc/: Makefile  code.rst  conf.py  index.rst  requirements.txt
doc/devices/: simulator.rst
pennylane_qrack/: QrackDeviceConfig.toml  __init__.py  _version.py  qrack_device.cpp  qrack_device.py
tests/: conftest.py  test_apply.py  test_integration.py
